--- a/learn-m365-pr/wwl/troubleshoot-hybrid-deployments/2-troubleshoot-directory-synchronization.yml
+++ b/learn-m365-pr/wwl/troubleshoot-hybrid-deployments/2-troubleshoot-directory-synchronization.yml
@@ -4,7 +4,7 @@ title: Troubleshoot directory synchronization
 metadata:
   title: Troubleshoot directory synchronization
   description: "Troubleshoot directory synchronization"
-  ms.date: 03/09/2022
+  ms.date: 05/04/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,7 +24,7 @@ quiz:
       explanation: "This answer is correct. The Microsoft Azure AD Sync service depends on the Windows Management Instrumentation service, which should also be running. If the ADSync service account appears to be OK, you should then check the status of the Windows Management Instrumentation service and verify that it's running."
     - content: "Verify the Connector credentials are valid"
       isCorrect: false
-      explanation: "This answer is incorrect. This task is a valid troubleshooting step when synchronization fails. However, it's not a troubleshooting step when the ADSync service won't start. Try again."
+      explanation: "This answer is incorrect. This task is a valid troubleshooting step when synchronization fails. However, it's not a troubleshooting step when the ADSync service won't start."
     - content: "Verify that none of the servers are set for Staging mode"
       isCorrect: false
-      explanation: "This answer is incorrect. This task is a valid troubleshooting step when synchronization fails. However, it's not a troubleshooting step when the ADSync service won't start. Try again."
+      explanation: "This answer is incorrect. This task is a valid troubleshooting step when synchronization fails. However, it's not a troubleshooting step when the ADSync service won't start."
