FY22Q4 refresh - intro-office-add-ins
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/intro-office-add-ins/4-customization.yml
+++ b/learn-m365-pr/m365-developer/intro-office-add-ins/4-customization.yml
@@ -3,7 +3,7 @@ uid: learn-m365.intro-office-add-ins.4-customization
 metadata:
   title: Understand how to customize Office Add-ins
   description: The Office Add-ins platform enables you to customize your add-in. In this unit, you'll explore how to customize your add-in by persisting state, and using Fluent UI and Microsoft Graph. By the end of this unit, you should know how to customize Office Add-ins using persisted state, Fluent UI, and Microsoft Graph.
-  ms.date: 03/01/2022
+  ms.date: 05/03/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -44,7 +44,7 @@ quiz:
       explanation: "A custom function may require the user to sign in but that's not where a user would sign in."
     - content: "Dialog"
       isCorrect: true
-      explanation: "The add-in needs to use the Dialog API to display the Azure AD login form in a dialog."
+      explanation: "The add-in needs to use the Dialog API to display the Azure AD sign-in form in a dialog."
     - content: "Task pane"
       isCorrect: false
-      explanation: "Azure AD doesn't allow their login form to be displayed in the task pane iframe."
+      explanation: "Azure AD doesn't allow their sign-in form to be displayed in the task pane iframe."
