New modules - modules 3 of the Viva Goals getting started LP

--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/introduction.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/introduction.yml
@@ -3,8 +3,8 @@ uid: learn-m365.viva-goals-create-track-close-okrs.introduction
 title: Introduction
 metadata:
   unitType: introduction
-  title: introduction
-  description: Understand what OKR's are and how they can help align objectives and key results
+  title: Introduction
+  description: Understand what OKRs are and how they can help align objectives and key results
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
