--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -2,15 +2,15 @@
 uid: learn-m365.viva-goals-create-track-close-okrs
 metadata:
   moduleType: standard
-  title: viva-goals-create-track-close-okrs
+  title: Create, track, and close your OKRs with Viva Goals
   description: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
   ms.date: 04/28/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: viva-goals-create-track-close-okrs
-summary: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.
+title: Create, track, and close your OKRs with Viva Goals
+summary: Learn how to use Viva Goals and understand how it can enable your organization to use OKRs to their full potential.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Navigate your way around Viva Goals
