--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/knowledge-check.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.knowledge-check
-title: Knowledge check
+title: Check your knowledge
 metadata:
   unitType: knowledge_check
-  title: Knowledge check
+  title: Check your knowledge
   description: Test your understanding of OKR's
   ms.date: 04/28/2022
   author: rasanders
@@ -11,20 +11,6 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 durationInMinutes: 1
-###########################################################################
-###
-### General guidance (https://review.docs.microsoft.com/learn-docs/docs/id-guidance-knowledge-check)
-###  - Questions are complete sentences ending with a question mark
-###  - No true/false questions
-###  - 3 answers per question
-###  - All answers about the same length
-###  - Numeric answers listed in sorted order
-###  - No "All of the above" and/or "None of the above" as answer choices
-###  - No "Not" or "Except" in questions
-###  - No second person ("you") in the questions or answers
-###  - Provide a meaningful explanation for both correct and incorrect answers
-###
-###########################################################################
 content: |
 quiz:
   questions:
