--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigating-viva-goals.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.navigating-viva-goals
-title: Navigating Viva Goals
+title: Navigate Viva Goals
 metadata:
   unitType: learning-content
-  title: Navigating Viva Goals
+  title: Navigate Viva Goals
   description: Learn how to navigate the Viva Goals screen
   ms.date: 04/28/2022
   author: rasanders
