--- a/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/index.yml
+++ b/learn-m365-pr/wwl/implement-advanced-hybrid-functionality/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.implement-advanced-hybrid-functionality
 metadata:
   title: Implement advanced hybrid functionality
   description: "Implement advanced hybrid functionality"
-  ms.date: 05/04/2022
+  ms.date: 05/05/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -27,6 +27,7 @@ products:
 - office
 - office-365
 - office-exchange-server
+- office-exchange-online
 units:
 - learn.wwl.implement-advanced-hybrid-functionality.introduction
 - learn.wwl.implement-advanced-hybrid-functionality.manage-hybrid-deployment
