--- a/learn-m365-pr/wwl/exchange-hybrid-deployment-requirements/6-compare-exchange-delegated-federation-open-authentication.yml
+++ b/learn-m365-pr/wwl/exchange-hybrid-deployment-requirements/6-compare-exchange-delegated-federation-open-authentication.yml
@@ -4,7 +4,7 @@ title: Compare Exchange delegated federation and Open Authentication
 metadata:
   title: Compare Exchange delegated federation and Open Authentication
   description: "Compare Exchange delegated federation and Open Authentication"
-  ms.date: 03/09/2022
+  ms.date: 05/05/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "It's required for some Exchange 2016 and later features, such as cross-premises discovery and automatic archive retention"
       isCorrect: false
-      explanation: "This answer is incorrect. This item is a feature of OAuth. Try again."
+      explanation: "This answer is incorrect. This item is a feature of OAuth."
     - content: "It's a standards-based framework that is widely used across the web services industry and within other Microsoft products such as Hotmail"
       isCorrect: false
-      explanation: "This answer is incorrect. This item is a feature of OAuth. Try again."
+      explanation: "This answer is incorrect. This item is a feature of OAuth."
     - content: "It uses standard federation technologies to allow Exchange organizations to establish trusted relationships with each other"
       isCorrect: true
       explanation: "This answer is correct. Exchange Federated Sharing is also known as Delegated Federation or Delegated Authentication (DAuth). It uses standard federation technologies to allow Exchange organizations to establish trusted relationships with each other."
