--- a/learn-m365-pr/wwl/exchange-hybrid-deployment-requirements/7-knowledge-check.yml
+++ b/learn-m365-pr/wwl/exchange-hybrid-deployment-requirements/7-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   title: Knowledge check
   description: "Knowledge check"
-  ms.date: 03/09/2022
+  ms.date: 05/05/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -21,10 +21,10 @@ quiz:
     choices:
     - content: "The AD FS server"
       isCorrect: false
-      explanation: "This answer is incorrect. The AD FS server authenticates your Microsoft Online ID against your local domain controllers and provides access to your mailbox located on Exchange Online. Try again."
+      explanation: "This answer is incorrect. The AD FS server authenticates your Microsoft Online ID against your local domain controllers and provides access to your mailbox located on Exchange Online."
     - content: "Exchange Online Protection"
       isCorrect: false
-      explanation: "This answer is incorrect. EOP works with on-premises Exchange servers to help secure message delivery between Exchange Server on-premises and Exchange Online. Try again."
+      explanation: "This answer is incorrect. EOP works with on-premises Exchange servers to help secure message delivery between Exchange Server on-premises and Exchange Online."
     - content: "Azure AD Connect"
       isCorrect: true
       explanation: "This answer is correct. Azure AD Connect synchronizes your local Active Directory information to Azure Active Directory, which is used by Microsoft 365. This design is a one-way synchronization of users, groups, and contacts, with limited write-back of Exchange related attributes to support coexistence and Exchange Online protection."
@@ -35,18 +35,18 @@ quiz:
       explanation: "This answer is correct. Both PTA and federation delegate authentication control to your directory service. By doing so, users no longer authenticate against Azure AD. However, with PTA, the user isn't redirected (which is the case with federation). Instead, the Azure AD service validates the password entered against the organization’s Active Directory."
     - content: "Directory synchronization federated with AD FS"
       isCorrect: false
-      explanation: "This answer is incorrect. Federation delegates authentication control to your directory service. By doing so, users no longer authenticate against Azure AD, but rather, against the organization's local AD. However, with federation, users are redirected to their organization's sign-in page when they enter their credentials on the Microsoft 365 sign-in page. Try again."
+      explanation: "This answer is incorrect. Federation delegates authentication control to your directory service. By doing so, users no longer authenticate against Azure AD, but rather, against the organization's local AD. However, with federation, users are redirected to their organization's sign-in page when they enter their credentials on the Microsoft 365 sign-in page."
     - content: "Directory synchronization with Password hash synchronization"
       isCorrect: false
-      explanation: "This answer is incorrect. With password hash synchronization, there are still two sets of security credentials - one on-premises and one in Azure AD. These credentials are kept aligned through directory synchronization and password synchronization. If you don't synchronize passwords, your users will have a separate password in Azure AD. They still authenticate to Azure AD to access Microsoft Exchange Online and other online services. Try again."
+      explanation: "This answer is incorrect. With password hash synchronization, there are still two sets of security credentials - one on-premises and one in Azure AD. These credentials are kept aligned through directory synchronization and password synchronization. If you don't synchronize passwords, your users will have a separate password in Azure AD. They still authenticate to Azure AD to access Microsoft Exchange Online and other online services."
   - content: "As the Messaging administrator for Fabrikam, Holly Spencer is planning to implement a hybrid Exchange deployment. Which of the following hybrid deployment components must Holly deploy on an on-premises Exchange server before configuring Fabrikam's hybrid deployment?"
     choices:
     - content: "Exchange Online Protection"
       isCorrect: false
-      explanation: "This answer is incorrect. By default, the Exchange Online Protection (EOP) service is included in all Microsoft 365 subscriptions for enterprise tenants. Try again."
+      explanation: "This answer is incorrect. By default, the Exchange Online Protection (EOP) service is included in all Microsoft 365 subscriptions for enterprise tenants."
     - content: "Azure AD Connect"
       isCorrect: true
       explanation: "This answer is correct. To support the unified GAL, synchronization of AD DS replicates information about mail-enabled objects from on-premises Active Directory to Microsoft 365. You must deploy Azure Active Directory Connect on an on-premises server before you can configure a hybrid deployment."
     - content: "Active Directory Federation Services"
       isCorrect: false
-      explanation: "This answer is incorrect. Optionally, you can use AD FS to configure single sign-on (SSO) and centralize user management. However, consider that most organizations find that Azure AD Connect password hash sync, seamless sign-on, and pass-through authentication options (combined with Microsoft 365 functionality like Conditional Access) negate the need for AD FS. Try again."
+      explanation: "This answer is incorrect. Optionally, you can use AD FS to configure single sign-on (SSO) and centralize user management. However, consider that most organizations find that Azure AD Connect password hash sync, seamless sign-on, and pass-through authentication options (combined with Microsoft 365 functionality like Conditional Access) negate the need for AD FS."
