--- a/learn-m365-pr/m365/ensuring-okr-program-success/create-psychological-safety.yml
+++ b/learn-m365-pr/m365/ensuring-okr-program-success/create-psychological-safety.yml
@@ -5,7 +5,7 @@ metadata:
   unitType: learning-content
   title: Create Psychological Safety
   description: Learn about psychological safety and how it refers to an employee's sense that they can speak up about their ideas
-  ms.date: ms.date: 05/05/2022
+  ms.date: 05/05/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
