--- a/learn-m365-pr/m365/role-of-champion/index.yml
+++ b/learn-m365-pr/m365/role-of-champion/index.yml
@@ -2,7 +2,7 @@
 uid: learn-m365.role-of-champion
 metadata:
   moduleType: standard
-  title: Role of a Champion
+  title: Role of a champion
   description: Learn about your role as an OKR Champion, how to communicate effectively and what resources are available to set you and your team up for success.
   ms.date: 05/05/2022
   author: rasanders
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Role of a Champion
-summary: Learn about your role as an OKR Champion, how to communicate effectively and what resources are available to set you and your team up for success.
+summary: Learn about your role as an OKR Champion, how to communicate effectively and what resources are available to set you and your team up for success.<br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
 abstract: |
   By the end of this module, you'll be able to:
     - Define OKR Champion
