--- a/learn-m365-pr/m365/role-of-champion/summary.yml
+++ b/learn-m365-pr/m365/role-of-champion/summary.yml
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 1
 content: |
-  [!include[](includes/summary.md)] <br><br>**IMPORTANT** - Viva Goals is currently available only for private preview customers, and only in English. The features described here are subject to change. [Learn more about Viva Goals.](https://go.microsoft.com/fwlink/?linkid=2189933)
+  [!include[](includes/summary.md)] 
