--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/index.yml
@@ -32,12 +32,12 @@ products:
 - viva
 units:
 - learn-m365.viva-goals-create-track-close-okrs.introduction
-- learn-m365.viva-goals-create-track-close-okrs.navigating-viva-goals
+- learn-m365.viva-goals-create-track-close-okrs.navigate-viva-goals
 - learn-m365.viva-goals-create-track-close-okrs.how-okrs-align-within-viva-goals
 - learn-m365.viva-goals-create-track-close-okrs.how-to-enter-okrs
 - learn-m365.viva-goals-create-track-close-okrs.how-to-track-okr-progress
-- learn-m365.viva-goals-create-track-close-okrs.close---how-to-close-your-okrs
-- learn-m365.viva-goals-create-track-close-okrs.integrating-viva-goals-with-third-party-systems
+- learn-m365.viva-goals-create-track-close-okrs.how-to-close-your-okrs
+- learn-m365.viva-goals-create-track-close-okrs.integrate-viva-goals-with-third-party-systems
 - learn-m365.viva-goals-create-track-close-okrs.knowledge-check
 - learn-m365.viva-goals-create-track-close-okrs.summary
 badge:
