--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrate-viva-goals-with-third-party-systems.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrate-viva-goals-with-third-party-systems.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-create-track-close-okrs.integrating-viva-goals-with-third-party-systems
-title: Integrating Viva Goals with third party systems
+uid: learn-m365.viva-goals-create-track-close-okrs.integrate-viva-goals-with-third-party-systems
+title: Integrat Viva Geoals with third party systems
 metadata:
   unitType: learning-content
-  title: Integrating Viva Goals with third party systems
+  title: Integrate Viva Goals with third party systems
   description: Learn how Viva Goals works seamlessly with third party system
   ms.date: 04/28/2022
   author: rasanders
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 1
 content: |
-  [!include[](includes/integrating-viva-goals-with-third-party-systems.md)]
+  [!include[](includes/integrate-viva-goals-with-third-party-systems.md)]
