--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigate-viva-goals.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/navigate-viva-goals.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-create-track-close-okrs.navigating-viva-goals
+uid: learn-m365.viva-goals-create-track-close-okrs.navigate-viva-goals
 title: Navigate Viva Goals
 metadata:
   unitType: learning-content
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 3
 content: |
-  [!include[](includes/navigating-viva-goals.md)]
+  [!include[](includes/navigate-viva-goals.md)]
