--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.Engaged reports with Viva Goals.reports
-title: Reporting on data with Viva Goals
+title: Reports
 metadata:
   unitType: learning-content
-  title: Reporting on data with Viva Goals
+  title: Reports
   description: Learn how Viva Goals allows you to manage and sort all the OKR data
   ms.date: 05/05/2022
   author: rasanders
