--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/introduction.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.Engaged reports with Viva Goals.introduction
+uid: learn-m365.engaged-reports-with-viva-goals.introduction
 title: Introduction
 metadata:
   unitType: introduction
