--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/knowledge-check.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.Engaged reports with Viva Goals.knowledge-check
+uid: learn-m365.engaged-reports-with-viva-goals.knowledge-check
 title: Knowledge check
 metadata:
   unitType: knowledge_check
