--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/reports.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.Engaged reports with Viva Goals.reports
+uid: learn-m365.engaged-reports-with-viva-goals.reports
 title: Reports
 metadata:
   unitType: learning-content
