--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/summary.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.Engaged reports with Viva Goals.summary
+uid: learn-m365.engaged-reports-with-viva-goals.summary
 title: Summary
 metadata:
   unitType: summary
