--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-best-practices.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-best-practices.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-write-effective-okrs.writing-best-practices
-title: Writing best practices
+uid: learn-m365.viva-goals-write-effective-okrs.okr-best-practices
+title: Review best practices for writing OKRs
 metadata:
   unitType: learning-content
-  title: Writing best practices
+  title: Review best practices for writing OKRs
   description: Learn best practices for writing OKRs.
   ms.date: 04/28/2022
   author: rasanders
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 6
 content: |
-  [!include[](includes/writing-best-practices.md)]
+  [!include[](includes/okr-best-practices.md)]
