--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-levels-alignment.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-levels-alignment.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-goals-write-effective-okrs.okr-levels-and-alignment
+uid: learn-m365.viva-goals-write-effective-okrs.okr-levels-alignment
 title: OKR levels and alignment
 metadata:
   unitType: learning-content
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 4
 content: |
-  [!include[](includes/okr-levels-and-alignment.md)]
+  [!include[](includes/okr-levels-alignment.md)]
