--- a/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-framework.yml
+++ b/learn-m365-pr/m365/viva-goals-write-effective-okrs/okr-framework.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-write-effective-okrs.okr-framework
-title: Writing framework
+title: Use a framework to create OKRs
 metadata:
   unitType: learning-content
-  title: Writing framework
+  title: Use a framework to create OKRs
   description: Learn a basic writing framework for OKRs.
   ms.date: 04/28/2022
   author: rasanders
