Apply pencil edit for blocking issue from PR review

--- a/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrate-viva-goals-with-third-party-systems.yml
+++ b/learn-m365-pr/m365/viva-goals-create-track-close-okrs/integrate-viva-goals-with-third-party-systems.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.viva-goals-create-track-close-okrs.integrate-viva-goals-with-third-party-systems
-title: Integrat Viva Geoals with third party systems
+title: Integrate Viva Goals with third party systems
 metadata:
   unitType: learning-content
   title: Integrate Viva Goals with third party systems
