--- a/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
+++ b/learn-m365-pr/m365/viva-goals-okr-essentials/index.yml
@@ -14,7 +14,7 @@ summary: Learn the key components of OKRs, their framework, and the benefits the
 abstract: |
   By the end of this module, you'll be able to:
     - Define the key components of an OKR and articulate how they fit together in the OKR framework.
-    - Identify the 5 OKR Superpowers and how to leverage them.
+    - Identify the five OKR Superpowers and how to leverage them.
     - Explain the Emotional Cycle of Change and identify where you are in the process.
 prerequisites: |
   None
