--- a/learn-m365-pr/m365/engaged-reports-with-viva-goals/knowledge-check.yml
+++ b/learn-m365-pr/m365/engaged-reports-with-viva-goals/knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   unitType: knowledge_check
   title: Knowledge check
-  description: Test your knowledge of OKR's
+  description: Test your knowledge of OKRs
   ms.date: 05/05/2022
   author: rasanders
   ms.author: rasanders
@@ -38,7 +38,7 @@ quiz:
       explanation: "That's incorrect. You can bookmark different entities and reports in Viva Goals, so they can be found quickly in the future."
     - content: "Teams, Individuals, Views"
       isCorrect: true
-      explanation: "That's correct. You are able to follow Team, Individuals and Views in Viva Goals, so they can be found quickly in the future."
+      explanation: "That's correct. You're able to follow Team, Individuals and Views in Viva Goals, so they can be found quickly in the future."
   - content: "Where are you able to Like or Comment an activity?"
     choices:
     - content: "The Feed, the page where the activity is being displayed, the activity tab"
@@ -50,14 +50,14 @@ quiz:
     - content: "Review Dashboard"
       isCorrect: false
       explanation: "That's incorrect. You can Like or comment on an activity either in a central location, or at relevant points throughout Viva Goals."
-  - content: "What are 3 Widgets that you can add to a Panel in Review Dashboard?"
+  - content: "What are three Widgets that you can add to a Panel in Review Dashboard?"
     choices:
     - content: "Objectives, Key Results, Projects"
       isCorrect: false
-      explanation: "That's incorrect. Widgets are available to display a set of data you have created. These give details and lists of relevant areas in the system."
+      explanation: "That's incorrect. Widgets are available to display a set of data you've created. These give details and lists of relevant areas in the system."
     - content: "Explorer, Review Dashboard, Objective"
       isCorrect: false
-      explanation: "That's incorrect. Widgets are available to display a set of data you have created. These give details and lists of relevant areas in the system."
+      explanation: "That's incorrect. Widgets are available to display a set of data you've created. These give details and lists of relevant areas in the system."
     - content: "OKR Detail, Project List, Custom Embed"
       isCorrect: true
       explanation: "That's correct. The OKR Detail widget allows you to focus on OKR trends, recent updates and status over time. Project List tracks status updates of multiple projects in one place. Custom Embed enables you to embed a URL in the context of OKRs."
