--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/introduction.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/introduction.yml
@@ -3,9 +3,9 @@ uid: learn-m365.ransomware-extortion-based-threats.introduction
 title: Introduction
 metadata:
   unitType: introduction
-  title: introduction
-  description: "TODO: this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
-  ms.date: 4/8/2022
+  title: Introduction
+  description: ""
+  ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
