--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
@@ -4,82 +4,58 @@ title: Knowledge check
 metadata:
   unitType: knowledge_check
   title: Knowledge check
-  description: "TODO: this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the unit; include relevant search keywords."
-  ms.date: 4/8/2022
+  description: "Check your knowledge"
+  ms.date: 5/5/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365 
-durationInMinutes: 1
-###########################################################################
-###
-### General guidance (https://review.docs.microsoft.com/learn-docs/docs/id-guidance-knowledge-check)
-###  - Questions are complete sentences ending with a question mark
-###  - No true/false questions
-###  - 3 answers per question
-###  - All answers about the same length
-###  - Numeric answers listed in sorted order
-###  - No "All of the above" and/or "None of the above" as answer choices
-###  - No "Not" or "Except" in questions
-###  - No second person ("you") in the questions or answers
-###  - Provide a meaningful explanation for both correct and incorrect answers
-###
-###########################################################################
+  ms.prod: learning-m365
+durationInMinutes: 5
+
 content: |
 quiz:
   questions:
-  - content: ""
+  - content: "Which is the correct definition of ransomware?"
     choices:
-    - content: ""
+    - content: "Malicious code that blocks access to a computer and/or its files and demands a ransom for the release of the files."
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "That's correct. The files are encrypted, and access is blocked until the ransom is paid."
+    - content: "•	Malicious code that steals data and auctions the data off to the highest bidder."
       isCorrect: false
-      explanation: ""
-    - content: ""
+      explanation: "That's incorrect. Although data is often stolen, data can be sold off to the highest bidder regardless of whether the ransom is paid or not."
+    - content: "•	Malicious code that allows files to be accessed but important parts are missing until a ransom is paid."
       isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "That's incorrect. Ransomware doesn't leave files partially encrypted."
+  - content: "If a user opens an email and select on a link, which turns out to be malicious, what type of attack is this called?"
     choices:
-    - content: ""
+    - content: "Phishing Attack"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "That's correct. Known as a social engineering attack, the attacker is relying on a user to select on a link without properly checking it's valid."
+    - content: "Smishing Attack"
       isCorrect: false
-      explanation: ""
-    - content: ""
+      explanation: "That's incorrect. A smishing attack uses text messages containing links to fraudulent sites."
+    - content: "Vishing Attack"
       isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "That's incorrect. Vishing relies on the power of voice to trick a user into divulging information useful to the attacker."
+  - content: "Which explanation best describes a ransomware family?"
     choices:
-    - content: ""
+    - content: "Cybercriminals that use ransomware to disrupt and extort money."
+      isCorrect: false
+      explanation: "That's incorrect. The alternative term for cybercriminals is ransomware actors."
+    - content: "Ransomware code that works in a similar way to other ransomware code."
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "That's correct. Certain attacks work in a similar way and have similar code characteristics, which is why they're called ransomware families."
+    - content: "Licensed ransomware that criminals can purchase from other cybercriminals."
       isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "That's incorrect. This is known as Ransomware-as-a-Service and allows criminals who aren't technical to also run attacks."
+  - content: "If an attacker managed to gain control of the computer system of a Water Supply Company and then change the level of additives in the drinking water, what type of attack would this be?"
     choices:
-    - content: ""
+    - content: "Human-Operated ransomware"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "That's correct. The attacker is specifically targeting a business to maximize the impact on the company and the general public."
+    - content: "Commodity ransomware"
       isCorrect: false
-      explanation: ""
-    - content: ""
+      explanation: "That's incorrect. Commodity ransomware relies on a lapse of judgment from an individual to help the attacker either by clicking on a file containing malicious code or by giving away information."
+    - content: "Ransom distributed denial of service attack"
       isCorrect: false
-      explanation: ""
-  - content: ""
-    choices:
-    - content: ""
-      isCorrect: true
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
+      explanation: "That's incorrect. A distributed denial of service attack works by flooding the system with so must information that it effectively grinds to a halt and stops legitimate work being carried out."
