--- a/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
+++ b/learn-m365-pr/m365/ransomware-extortion-based-threats/knowledge-check.yml
@@ -20,10 +20,10 @@ quiz:
     - content: "Malicious code that blocks access to a computer and/or its files and demands a ransom for the release of the files."
       isCorrect: true
       explanation: "That's correct. The files are encrypted, and access is blocked until the ransom is paid."
-    - content: "•	Malicious code that steals data and auctions the data off to the highest bidder."
+    - content: "Malicious code that steals data and auctions the data off to the highest bidder."
       isCorrect: false
       explanation: "That's incorrect. Although data is often stolen, data can be sold off to the highest bidder regardless of whether the ransom is paid or not."
-    - content: "•	Malicious code that allows files to be accessed but important parts are missing until a ransom is paid."
+    - content: "Malicious code that allows files to be accessed but important parts are missing until a ransom is paid."
       isCorrect: false
       explanation: "That's incorrect. Ransomware doesn't leave files partially encrypted."
   - content: "If a user opens an email and select on a link, which turns out to be malicious, what type of attack is this called?"
