--- a/learn-m365-pr/m365/ensure-okr-program-success/index.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/index.yml
@@ -2,14 +2,14 @@
 uid: learn-m365.ensure-okr-program-success
 metadata:
   moduleType: standard
-  title: Ensuring OKR Program Success
+  title: Ensure OKR program success
   description: Learn how to launch Viva Goals successfully.
   ms.date: 05/05/2022
   author: rasanders
   ms.author: rasanders
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Ensuring OKR Program Success
+title: Ensure OKR program success
 summary: Learn how to launch Viva Goals successfully.
 abstract: |
   By the end of this module, you'll be able to:
