--- a/learn-m365-pr/m365/ensure-okr-program-success/create-psychological-safety.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/create-psychological-safety.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.ensure-okr-program-success.create-psychological-safety
-title: Create Psychological Safety
+title: Create psychological safety
 metadata:
   unitType: learning-content
-  title: Create Psychological Safety
+  title: Create psychological safety
   description: Learn about psychological safety and how it refers to an employee's sense that they can speak up about their ideas
   ms.date: 05/05/2022
   author: rasanders
