--- a/learn-m365-pr/m365/ensure-okr-program-success/establish-business-rhythms.yml
+++ b/learn-m365-pr/m365/ensure-okr-program-success/establish-business-rhythms.yml
@@ -1,6 +1,6 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.ensure-okr-program-success.establish-business-rhythms
-title: Establish Business Rhythms
+title: Establish business rhythms
 metadata:
   unitType: learning-content
   title: Establish Business Rhythms
