FY22Q4 refresh - spfx-web-part-property-pane
- run through all exercise steps in associated MSLearn module to validate good working order
- updated steps & fixed typos where necessary
- implement changes per Acrolinx feedback
- any & all users/names/company names/pictures/IDs are not real people/tenants... all are from M365 demo tenants provided by Microsoft

--- a/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/3-exercise-web-part-property-pane.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/3-exercise-web-part-property-pane.yml
@@ -3,7 +3,7 @@ uid: learn-m365.sharepoint-spfx-web-part-property-pane.3-exercise-web-part-prope
 metadata:
   title: Exercise - Work with the web part property pane
   description: In this exercise, you'll manipulate the property pane for a SharePoint Framework client-side web part with controls, groups, and pages.
-  ms.date: 03/07/2022
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
@@ -22,7 +22,7 @@ quiz:
       explanation: "There's no property `autoUpdateWebPartProperties` on the `BaseClientSideWebPart` class."
     - content: "Implement the `disableReactivePropertyChanges` overridable property on the `BaseClientSideWebPart` class to return `false`."
       isCorrect: false
-      explanation: "The `disableReactivePropertyChanges` property already returns `false` by default, unless its overridden."
+      explanation: "The `disableReactivePropertyChanges` property already returns `false` by default, unless it's overridden."
     - content: "Nothing - the default reactive mode of the property pane automatically updates properties when they're changed in the property pane."
       isCorrect: true
       explanation: "Correct!"
