--- a/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/6-pnp-controls.yml
+++ b/learn-m365-pr/m365-developer/sharepoint-spfx-web-part-property-pane/6-pnp-controls.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.sharepoint-spfx-web-part-property-pane.6-pnp-controls
 metadata:
-  title: Leverage the PnP reusable property pane controls
+  title: Use the PnP reusable property pane controls
   description: In this unit, you'll learn how you can use third-party controls from the popular PnP SPFx reusable property pane controls project.
-  ms.date: 09/13/2021
+  ms.date: 05/02/2022
   author: andrewconnell-msft
   ms.author: suzanz
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Leverage the PnP reusable property pane controls
+title: Use the PnP reusable property pane controls
 durationInMinutes: 9
 content: |
   [!include[](includes/6-pnp-controls.md)]
